fix bug search image not showing in chrome - android #1

--- a/frontend_src/src/style.scss
+++ b/frontend_src/src/style.scss
@@ -12,7 +12,7 @@
 
 html {
     font-size: $baseFontSize - 1px;
-
+    height: 100%;
     @media screen and (min-width: 480px) {
         font-size: $baseFontSize;
     }
